[tool.poetry]
name = "powerplant-coding-challenge"
version = "0.1.0"
description = "coding challenge - powerplan"
authors = ["Ana Fernandez"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
